--- a/assets/sass/_geral.scss
+++ b/assets/sass/_geral.scss
@@ -7,3 +7,27 @@ html, body{
   background-color: var(--cor-fundo);
   transition: .5s;
 }
+
+a,a:link,a:visited,a:hover,a:active, a:focus{
+  font-weight: bold;
+  text-decoration: inherit;
+  color: inherit;
+  cursor: pointer;
+}
+
+// HR ===========================================
+.hr{
+  &-padrao{
+    width: 100%;
+    border: 1px solid;
+    color: var(--cor-destaque);
+    opacity: .25;
+  }
+  &-curto{
+    width: 100px;
+    margin: 5px auto 10px;
+    border: 3px solid;
+    color: var(--cor-destaque);
+    opacity: .5;
+  }
+}
