--- a/assets/sass/principal.scss
+++ b/assets/sass/principal.scss
@@ -14,6 +14,7 @@
 
 // Seções =======================================
 @import "navegacao";
+@import "rodape";
 
 // Páginas ======================================
 @import "pagina-inicio";
