--- a/assets/css/principal.css
+++ b/assets/css/principal.css
@@ -49,8 +49,37 @@ a, a:link, a:visited, a:hover, a:active, a:focus {
   opacity: .5; }
 
 /* COMPONENTES ================================== */
+.projeto-titulo {
+  margin-bottom: 15px;
+  font-size: 1.5em;
+  font-weight: bold;
+  color: var(--cor-base-texto); }
+.projeto-resumo {
+  margin-bottom: 15px;
+  font-size: 1.15em;
+  color: var(--cor-media-texto); }
+.projeto-link {
+  margin-bottom: 15px;
+  display: inline-flex;
+  align-items: center;
+  font-size: 1em;
+  font-weight: bold; }
+  .projeto-link span {
+    margin-right: 5px;
+    color: var(--cor-destaque); }
+  .projeto-link .fa-angle-right {
+    color: var(--cor-destaque); }
+  .projeto-link:after {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+    content: "";
+    color: var(--cor-base-texto); }
+
 /* NAVEGAÇÃO ==================================== */
-/* NAVEGAÇÃO =============== */
 .navbar .nav-item {
   float: right;
   font-size: 1.2em; }
@@ -138,7 +167,7 @@ a, a:link, a:visited, a:hover, a:active, a:focus {
 .navbar-light .navbar-nav .nav-link.disabled {
   color: inherit; }
 
-/* RODAPÉ =============== */
+/* RODAPÉ ======================================= */
 footer {
   padding: 30px 0; }
   footer .logo {
@@ -161,7 +190,7 @@ footer {
       height: auto;
       margin: 0 5px; }
 
-/* PÁGINA: Início =============== */
+/* PÁGINA: Início =============================== */
 body#pagina-inicio header {
   margin: 50px auto 30px auto; }
   body#pagina-inicio header h2 {
