--- a/assets/sass/_geral.scss
+++ b/assets/sass/_geral.scss
@@ -31,3 +31,10 @@ a,a:link,a:visited,a:hover,a:active, a:focus{
     opacity: .5;
   }
 }
+
+// Imagens ======================================
+.img-perfil{
+  width: 200px;
+  height: auto;
+  border-radius: 50%;
+}
