--- a/assets/sass/_variaveis.scss
+++ b/assets/sass/_variaveis.scss
@@ -7,14 +7,16 @@
 // Váriaveis: SASS ==============================
 // Cores ========================================
 $cor-preto: #212529;
+$cor-total-preto: #1a1d20;
+
+$cor-branco: #F8F9FA;
+$cor-total-branco: #FFFFFF;
+
 $cor-cinza-escuro: #6C757D;
 $cor-cinza-claro: #A9A9A9;
-$cor-branco: #F8F9FA;
 
 $cor-destaque-claro: #C21010;
 $cor-destaque-escuro: #A0DC41;
-
-//$cat-1: #4E9F3D;
 
 
 // Váriaveis: CSS ===============================
@@ -22,13 +24,16 @@ $cor-destaque-escuro: #A0DC41;
 :root{
   --cor-base-texto: #{$cor-preto};
   --cor-media-texto: #{$cor-cinza-escuro};
+
   --cor-fundo: #{$cor-branco};
+  --cor-fundo-destaque: #{$cor-total-branco};
 
   --cor-invertido-texto: #{$cor-branco};
   --cor-invertido-fundo: #{$cor-preto};
 
+  --cor-detalhe-rgb: #{hexToRGB($cor-cinza-escuro)};
+
   --cor-destaque: #{$cor-destaque-claro};
-  //--cor-destaque-rgb: #{hexToRGB($cor-destaque-claro)};
   --cor-destaque-invertido: #{$cor-destaque-escuro};
 }
 
@@ -36,12 +41,15 @@ $cor-destaque-escuro: #A0DC41;
 .tema-escuro:root{
   --cor-base-texto: #{$cor-branco};
   --cor-media-texto: #{$cor-cinza-claro};
+
   --cor-fundo: #{$cor-preto};
+  --cor-fundo-destaque: #{$cor-total-preto};
 
   --cor-invertido-texto: #{$cor-preto};
   --cor-invertido-fundo: #{$cor-branco};
 
+  --cor-detalhe-rgb: #{hexToRGB($cor-cinza-claro)};
+
   --cor-destaque: #{$cor-destaque-escuro};
-  //--cor-destaque-rgb: #{hexToRGB($cor-destaque-escuro)};
   --cor-destaque-invertido: #{$cor-destaque-claro};
 }
