--- a/assets/css/principal.css
+++ b/assets/css/principal.css
@@ -9,8 +9,10 @@
   --cor-base-texto: #212529;
   --cor-media-texto: #6C757D;
   --cor-fundo: #F8F9FA;
+  --cor-fundo-destaque: #FFFFFF;
   --cor-invertido-texto: #F8F9FA;
   --cor-invertido-fundo: #212529;
+  --cor-detalhe-rgb: 108, 117, 125;
   --cor-destaque: #C21010;
   --cor-destaque-invertido: #A0DC41; }
 
@@ -18,8 +20,10 @@
   --cor-base-texto: #F8F9FA;
   --cor-media-texto: #A9A9A9;
   --cor-fundo: #212529;
+  --cor-fundo-destaque: #1a1d20;
   --cor-invertido-texto: #212529;
   --cor-invertido-fundo: #F8F9FA;
+  --cor-detalhe-rgb: 169, 169, 169;
   --cor-destaque: #A0DC41;
   --cor-destaque-invertido: #C21010; }
 
@@ -36,17 +40,29 @@ a, a:link, a:visited, a:hover, a:active, a:focus {
   color: inherit;
   cursor: pointer; }
 
-.hr-padrao {
-  width: 100%;
-  border: 1px solid;
-  color: var(--cor-destaque);
-  opacity: .25; }
-.hr-curto {
+div.separador-curto {
   width: 100px;
+  height: 10px;
   margin: 5px auto 10px;
-  border: 3px solid;
-  color: var(--cor-destaque);
-  opacity: .5; }
+  background: var(--cor-destaque);
+  opacity: .5;
+  --mask:
+  radial-gradient(8.21px at 50% calc(100% + 2.75px),#0000 calc(99% - 5px),#000 calc(101% - 5px) 99%,#0000 101%) calc(50% - 10px) calc(50% - 5px + .5px)/20px 10px repeat-x,
+  radial-gradient(8.21px at 50% -2.75px,#0000 calc(99% - 5px),#000 calc(101% - 5px) 99%,#0000 101%) 50% calc(50% + 5px)/20px 10px repeat-x;
+  -webkit-mask: var(--mask);
+  mask: var(--mask); }
+
+div.separador-longo {
+  width: 100%;
+  height: 10px;
+  margin: 5px auto 20px;
+  background: var(--cor-destaque);
+  opacity: .2;
+  --mask:
+    radial-gradient(5.57px at 50% calc(100% + 2.20px),#0000 calc(99% - 2px),#000 calc(101% - 2px) 99%,#0000 101%) calc(50% - 8px) calc(50% - 3px + .5px)/16px 6px repeat-x,
+    radial-gradient(5.57px at 50% -2.2px,#0000 calc(99% - 2px),#000 calc(101% - 2px) 99%,#0000 101%) 50% calc(50% + 3px)/16px 6px repeat-x;
+  -webkit-mask: var(--mask);
+  mask: var(--mask); }
 
 .img-perfil {
   width: 200px;
@@ -88,7 +104,11 @@ a, a:link, a:visited, a:hover, a:active, a:focus {
     color: var(--cor-base-texto); }
 
 .estudo {
-  text-align: center; }
+  padding: 20px;
+  border-radius: 0.365rem;
+  border: 2px solid rgba(var(--cor-detalhe-rgb), 0.3);
+  text-align: center;
+  background-color: var(--cor-fundo-destaque); }
   .estudo-icone {
     color: var(--cor-base-texto); }
   .estudo-titulo {
