--- a/assets/sass/_geral.scss
+++ b/assets/sass/_geral.scss
@@ -15,21 +15,33 @@ a,a:link,a:visited,a:hover,a:active, a:focus{
   cursor: pointer;
 }
 
-// HR ===========================================
-.hr{
-  &-padrao{
-    width: 100%;
-    border: 1px solid;
-    color: var(--cor-destaque);
-    opacity: .25;
-  }
-  &-curto{
-    width: 100px;
-    margin: 5px auto 10px;
-    border: 3px solid;
-    color: var(--cor-destaque);
-    opacity: .5;
-  }
+// Separador ===========================================
+div.separador-curto{
+  width: 100px;
+  height: 10px;
+  margin: 5px auto 10px;
+  background: var(--cor-destaque);
+  opacity: .5;
+
+  --mask:
+  radial-gradient(8.21px at 50% calc(100% + 2.75px),#0000 calc(99% - 5px),#000 calc(101% - 5px) 99%,#0000 101%) calc(50% - 10px) calc(50% - 5px + .5px)/20px 10px repeat-x,
+  radial-gradient(8.21px at 50% -2.75px,#0000 calc(99% - 5px),#000 calc(101% - 5px) 99%,#0000 101%) 50% calc(50% + 5px)/20px 10px repeat-x;
+  -webkit-mask: var(--mask);
+          mask: var(--mask);
+}
+
+div.separador-longo{
+  width: 100%;
+  height: 10px;
+  margin: 5px auto 20px;
+  background: var(--cor-destaque);
+  opacity: .2;
+
+  --mask:
+    radial-gradient(5.57px at 50% calc(100% + 2.20px),#0000 calc(99% - 2px),#000 calc(101% - 2px) 99%,#0000 101%) calc(50% - 8px) calc(50% - 3px + .5px)/16px 6px repeat-x,
+    radial-gradient(5.57px at 50% -2.2px,#0000 calc(99% - 2px),#000 calc(101% - 2px) 99%,#0000 101%) 50% calc(50% + 3px)/16px 6px repeat-x;
+    -webkit-mask: var(--mask);
+            mask: var(--mask);
 }
 
 // Imagens ======================================
