--- a/assets/css/principal.css
+++ b/assets/css/principal.css
@@ -268,44 +268,43 @@ body#pagina-inicio section .webdev-title {
   font-size: 1.75em; }
 
 /* PÁGINA: Sobre ================================ */
-body#pagina-sobre {
-  /*
-  .navbar-toggler,
-  .navbar-toggler:focus{
-    border: none;
-    color: var(--cor-invertido-texto);
-  }
-  */ }
-  body#pagina-sobre #secao-biografia h2 {
-    margin: 15px 0px;
-    font-size: 2em;
+body#pagina-sobre .navbar .nav-item .decoracao.decoracao-animada {
+  opacity: 0.8; }
+body#pagina-sobre .img-perfil {
+  border: 7px solid var(--cor-destaque); }
+body#pagina-sobre #secao-biografia h2 {
+  margin: 15px 0px;
+  font-size: 2em;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: var(--cor-base-texto); }
+body#pagina-sobre #secao-biografia p.resumo {
+  font-size: 1.15em;
+  color: var(--cor-base-texto); }
+  body#pagina-sobre #secao-biografia p.resumo a {
     font-weight: bold;
-    text-transform: uppercase;
-    color: var(--cor-base-texto); }
-  body#pagina-sobre #secao-biografia p.resumo {
-    font-size: 1.15em;
-    color: var(--cor-base-texto); }
-    body#pagina-sobre #secao-biografia p.resumo a {
-      font-weight: bold;
-      color: var(---cor-destaque); }
-  body#pagina-sobre .fundo-secao-ads {
-    background-color: var(--cor-invertido-fundo); }
-  body#pagina-sobre #secao-ads h3 {
-    margin: 15px 0px;
-    font-size: 1.75em;
-    font-weight: bold;
-    text-transform: uppercase;
-    color: var(--cor-invertido-texto); }
-  body#pagina-sobre #secao-ads .hr-curto {
-    color: var(--cor-destaque-invertido); }
-  body#pagina-sobre #secao-ads .secao-ads-resumo {
-    font-size: 1.15em;
-    color: var(--cor-invertido-texto); }
-  body#pagina-sobre #sec-art h3 {
-    margin: 15px 0px;
-    font-size: 1.75em;
-    font-weight: bold;
-    text-transform: uppercase;
-    color: var(--cor-base-texto); }
+    color: var(---cor-destaque); }
+body#pagina-sobre .fundo-secao-ads {
+  background-color: var(--cor-invertido-fundo); }
+body#pagina-sobre #secao-ads h3 {
+  margin: 15px 0px;
+  font-size: 1.75em;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: var(--cor-invertido-texto); }
+body#pagina-sobre #secao-ads .hr-curto {
+  color: var(--cor-destaque-invertido); }
+body#pagina-sobre #secao-ads .secao-ads-resumo {
+  font-size: 1.15em;
+  color: var(--cor-invertido-texto); }
+body#pagina-sobre #sec-art h3 {
+  margin: 15px 0px;
+  font-size: 1.75em;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: var(--cor-base-texto); }
+
+.tema-escuro:root body#pagina-sobre .navbar .nav-item .decoracao.decoracao-animada {
+  opacity: 0.5; }
 
 /*# sourceMappingURL=principal.css.map */
