Correção geral na página de portfolio

--- a/assets/sass/_pagina-sobre.scss
+++ b/assets/sass/_pagina-sobre.scss
@@ -52,7 +52,7 @@ body#pagina-sobre{
   }
 
   // Sobre: Arte ================================
-  #sec-art{
+  #sec-arte{
     h3{
       margin: 15px 0px;
       font-size: 1.75em;
