--- a/assets/css/principal.css
+++ b/assets/css/principal.css
@@ -299,7 +299,7 @@ body#pagina-sobre #secao-ads .separador-curto {
 body#pagina-sobre #secao-ads .secao-ads-resumo {
   font-size: 1.15em;
   color: var(--cor-invertido-texto); }
-body#pagina-sobre #sec-art h3 {
+body#pagina-sobre #sec-arte h3 {
   margin: 15px 0px;
   font-size: 1.75em;
   font-weight: bold;
@@ -307,6 +307,48 @@ body#pagina-sobre #sec-art h3 {
   color: var(--cor-base-texto); }
 
 .tema-escuro:root body#pagina-sobre .navbar .nav-item .decoracao.decoracao-animada {
+  opacity: 0.5; }
+
+/* PÁGINA: Portfólio ============================ */
+body#pagina-portfolio .navbar .nav-item .decoracao.decoracao-animada {
+  opacity: 0.8; }
+body#pagina-portfolio .navbar .navbar-toggler, body#pagina-portfolio .navbar .navbar-toggler {
+  color: var(--cor-invertido-texto); }
+body#pagina-portfolio h3 {
+  margin: 15px 0px;
+  font-size: 1.75em;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: var(--cor-base-texto); }
+body#pagina-portfolio .portfolio-artigo .portfolio-thumbnail {
+  height: 250px;
+  width: 200px; }
+  body#pagina-portfolio .portfolio-artigo .portfolio-thumbnail img {
+    display: block;
+    object-fit: cover; }
+body#pagina-portfolio .portfolio-artigo .portfolio-categoria {
+  font-weight: bold; }
+  body#pagina-portfolio .portfolio-artigo .portfolio-categoria.frontend {
+    color: red; }
+body#pagina-portfolio .portfolio-artigo .portfolio-titulo {
+  margin-bottom: 15px;
+  font-size: 1.5em;
+  font-weight: bold;
+  color: var(--cor-base-texto); }
+body#pagina-portfolio .portfolio-artigo .portfolio-abstract {
+  color: var(--cor-nivel-1-texto); }
+body#pagina-portfolio .portfolio-artigo .portfolio-link {
+  color: var(--cor-base-texto); }
+  body#pagina-portfolio .portfolio-artigo .portfolio-link::after {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+    content: ""; }
+
+.tema-escuro:root body#pagina-portfolio .navbar .nav-item .decoracao.decoracao-animada {
   opacity: 0.5; }
 
 /*# sourceMappingURL=principal.css.map */
