--- a/assets/sass/_pagina-portfolio.scss
+++ b/assets/sass/_pagina-portfolio.scss
@@ -37,7 +37,7 @@ body#pagina-portfolio{
         color: var(--cor-base-texto);
       }
 
-      &-abstract{
+      &-resumo{
         color: var(--cor-nivel-1-texto);
       }
 
