Ajuste no menu de navegação no mobile, remoção das artes da página sobre e continuidade da página de portfólio.

--- a/assets/sass/_navegacao.scss
+++ b/assets/sass/_navegacao.scss
@@ -128,7 +128,14 @@
 
 // Media Query ==================================
 @media (max-width: (576px-1)){
-  .navbar .nav-item.active{ border-bottom: none; }
+  .navbar .nav-item.active{ 
+    position: relative;
+    width: 25%;
+    left: 50%;
+    transform: translateX(-50%);
+
+    border-bottom: none; 
+  }
 }
 
 
