--- a/assets/css/principal.css
+++ b/assets/css/principal.css
@@ -217,6 +217,10 @@ div.separador-longo {
 
 @media (max-width: 575px) {
   .navbar .nav-item.active {
+    position: relative;
+    width: 25%;
+    left: 50%;
+    transform: translateX(-50%);
     border-bottom: none; } }
 .navbar-light .navbar-nav .nav-link.disabled {
   color: inherit; }
@@ -299,12 +303,12 @@ body#pagina-sobre #secao-ads .separador-curto {
 body#pagina-sobre #secao-ads .secao-ads-resumo {
   font-size: 1.15em;
   color: var(--cor-invertido-texto); }
-body#pagina-sobre #sec-arte h3 {
-  margin: 15px 0px;
-  font-size: 1.75em;
-  font-weight: bold;
-  text-transform: uppercase;
-  color: var(--cor-base-texto); }
+body#pagina-sobre .projetos-sobre .projeto-titulo {
+  color: var(--cor-invertido-texto); }
+body#pagina-sobre .projetos-sobre .projeto-link span {
+  color: var(--cor-destaque-invertido); }
+body#pagina-sobre .projetos-sobre .projeto-link .fa-angle-right {
+  color: var(--cor-destaque-invertido); }
 
 .tema-escuro:root body#pagina-sobre .navbar .nav-item .decoracao.decoracao-animada {
   opacity: 0.5; }
@@ -336,9 +340,9 @@ body#pagina-portfolio .portfolio-artigo .portfolio-titulo {
   font-weight: bold;
   color: var(--cor-base-texto); }
 body#pagina-portfolio .portfolio-artigo .portfolio-resumo {
-  color: var(--cor-nivel-1-texto); }
+  color: var(--cor-media-texto); }
 body#pagina-portfolio .portfolio-artigo .portfolio-link {
-  color: var(--cor-base-texto); }
+  color: var(--cor-destaque); }
   body#pagina-portfolio .portfolio-artigo .portfolio-link::after {
     position: absolute;
     top: 0;
